fixed footer padding and made home page content aligned center

--- a/styles.css
+++ b/styles.css
@@ -563,7 +563,7 @@ footer .cta {
   }
 
   .landing {
-    padding: 8rem 6rem 3rem;
+    /* padding: 12rem 6rem 3rem; */
     display: grid;
     place-content: center;
     /* gap: 15rem; */
@@ -582,7 +582,7 @@ footer .cta {
     width: 100%;
   }
   .title-container {
-    margin: auto;
+    margin:auto auto 4rem;
   }
   .title {
     margin: auto;
@@ -592,7 +592,7 @@ footer .cta {
     text-align: center;
   }
   .landing .cta {
-    margin: 20% auto;
+    margin: auto;
     height: fit-content;
   }
 
@@ -636,7 +636,7 @@ footer .cta {
     padding: 8rem 8rem 5rem;
   }
   footer {
-    padding: 4rem 6rem;
+    padding: 4rem 8rem;
   }
   .name {
     font-size: 2.8em;
